Fix wrong custom breakpoint that was too small

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -27,7 +27,7 @@
 
   --font-weight-regular: 400;
 
-  --breakpoint-xxs: 4rem;
+  --breakpoint-xxs: 24rem;
   --breakpoint-xs: 32rem;
 }
 
